syntax = "proto2"; 
package org.acme.travels.visaApplications; 
import "kogito-index.proto";
import "kogito-types.proto";
option kogito_model = "VisaApplications";
option kogito_id = "visaApplications";

/* @Indexed */ 
message VisaApplication { 
	option java_package = "org.acme.travels.visaApplications";
	/* @Field(store = Store.YES, analyze = Analyze.YES) */ 
	optional bool approved = 1; 
	/* @Field(store = Store.YES, analyze = Analyze.YES) */ 
	optional string city = 2; 
	/* @Field(store = Store.YES, analyze = Analyze.YES) */ 
	optional string country = 3; 
	/* @Field(store = Store.YES, analyze = Analyze.YES) */ 
	optional int32 duration = 4; 
	/* @Field(store = Store.YES, analyze = Analyze.YES) */ 
	optional string firstName = 5; 
	/* @Field(store = Store.YES, analyze = Analyze.YES) */ 
	optional string lastName = 6; 
	/* @Field(store = Store.YES, analyze = Analyze.YES) */ 
	optional string nationality = 7; 
	/* @Field(store = Store.YES, analyze = Analyze.YES) */ 
	optional string passportNumber = 8; 
}
/* @Indexed */ 
message VisaApplications { 
	option java_package = "org.acme.travels.visaApplications";
	/* @Field(store = Store.YES, analyze = Analyze.YES) */ 
	optional string id = 1; 
	/* @Field(store = Store.YES, analyze = Analyze.YES) */ 
	optional VisaApplication visaApplication = 2; 
	/* @Field(store = Store.YES, analyze = Analyze.YES) */ 
	repeated org.kie.kogito.index.model.ProcessInstanceMeta processInstances = 3; 
	/* @Field(store = Store.YES, analyze = Analyze.YES) */ 
	repeated org.kie.kogito.index.model.UserTaskInstanceMeta userTasks = 4; 
}
